exports[`Respository template repository name when no other data 1`] = `
<div>
  <h2>
    name
  </h2>
</div>
`;

exports[`Respository template repository name, commit info, latest release, current milestones multiple milestones 1`] = `
<div>
  <h2>
    name
  </h2>
  <p>
    <strong>
      Last commit date: 
    </strong>
    2016-9-30
    <i>
       
      commit message
    </i>
  </p>
  <p>
    <strong>
      Latest release: 
    </strong>
    Latest release
  </p>
  <p>
    <strong>
      Milestones: 
    </strong>
    <span>
      <i>
        Milestone 1
      </i>
       (open: 
      1
      )
    </span>
    <span>
       | 
      <i>
        Milestone 2
      </i>
       (open: 
      1
      )
    </span>
  </p>
</div>
`;

exports[`Respository template repository name, commit info, latest release, current milestones with milestone due date 1`] = `
<div>
  <h2>
    name
  </h2>
  <p>
    <strong>
      Last commit date: 
    </strong>
    2016-9-30
    <i>
       
      commit message
    </i>
  </p>
  <p>
    <strong>
      Latest release: 
    </strong>
    Latest release
  </p>
  <p>
    <strong>
      Milestones: 
    </strong>
    <span>
      <i>
        Milestone 1
      </i>
       (open: 
      1
      , due: due date
      )
    </span>
  </p>
</div>
`;

exports[`Respository template repository name, commit info, latest release, current milestones without a release name 1`] = `
<div>
  <h2>
    name
  </h2>
  <p>
    <strong>
      Last commit date: 
    </strong>
    2016-9-30
    <i>
       
      commit message
    </i>
  </p>
  <p>
    <strong>
      Latest release: 
    </strong>
    Tag Name
  </p>
  <p>
    <strong>
      Milestones: 
    </strong>
    <span>
      <i>
        Milestone 1
      </i>
       (open: 
      1
      )
    </span>
  </p>
</div>
`;

exports[`Respository template repository name, commit info, latest release, current milestones without milestone due date 1`] = `
<div>
  <h2>
    name
  </h2>
  <p>
    <strong>
      Last commit date: 
    </strong>
    2016-9-30
    <i>
       
      commit message
    </i>
  </p>
  <p>
    <strong>
      Latest release: 
    </strong>
    Latest release
  </p>
  <p>
    <strong>
      Milestones: 
    </strong>
    <span>
      <i>
        Milestone 1
      </i>
       (open: 
      1
      )
    </span>
  </p>
</div>
`;
